""" Starterkit flavors in form of Bazel execution platforms. """

package(default_visibility = ["//visibility:public"])

# Anything falling in this category should not execute
platform(name = "DEV_NULL_PLATFORM")

platform(
    name = "starterkit-x86_64-linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    exec_properties = {
        "OSFamily": "Linux",
    },
)

# Please be aware,
# that you should select only ONE
# of the following platforms to be registered,
# or add more specific constraints.

platform(
    name = "ash",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash:5mfaxwh59bw9g7747j33v4psf2g604vl",
    },
)

platform(
    name = "ash-bash",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash:rp363if620mv24p7pb8w05d9dvcj388r",
    },
)

platform(
    name = "ash-bash-coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-coreutils:agiis24gmpa353nbizs5mjvvbnakvl1h",
    },
)

platform(
    name = "ash-bash-coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-coreutils-i686:sjvm402n6m19jmplx545b29inhjdcys5",
    },
)

platform(
    name = "ash-bash-coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-coreutils-i686-cc:ii7kpr614agid2mbmx4dlynx8cc8p2cq",
    },
)

platform(
    name = "ash-bash-coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-coreutils-i686-cc-x86_64:k66nllm2d8ggx4ny4an8lrc8wx26wyqy",
    },
)

platform(
    name = "ash-bash-coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-coreutils-i686-cc-x86_64-cc:myl0xwv1z442sc5ci982qny9lb0c0giv",
    },
)

platform(
    name = "ash-bash-coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-coreutils-i686-x86_64:9cqgaw0pdm7fl0kla1svaxlkjl9014n0",
    },
)

platform(
    name = "ash-bash-coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-coreutils-i686-x86_64-cc:lmgjn8d588rgs35f57h2dcxfdc6gda67",
    },
)

platform(
    name = "ash-bash-coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-coreutils-x86_64:a616qd783kmbhi4jgsnjab36zxigb2zf",
    },
)

platform(
    name = "ash-bash-coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-coreutils-x86_64-cc:pbjzzshl1qy0xhaq0319s8jrq9wp42cp",
    },
)

platform(
    name = "ash-bash-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-i686:jf5cnqdi1a3k3akivaxj920kj8xj4rc0",
    },
)

platform(
    name = "ash-bash-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-i686-cc:ws7rx0fsmnb190if034c387hsynphl3k",
    },
)

platform(
    name = "ash-bash-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-i686-cc-x86_64:hff8vxjjb2k4m3iwbk1j040rmbnfk65g",
    },
)

platform(
    name = "ash-bash-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-i686-cc-x86_64-cc:3njs2qp88dnr852lgy20hcz9sg7yw4r3",
    },
)

platform(
    name = "ash-bash-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-i686-x86_64:49cv4pdlsfhaqc5f9x0w76cj2p7iwxa2",
    },
)

platform(
    name = "ash-bash-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-i686-x86_64-cc:wig5l608yvl9iqxclp9l744w4cf41jii",
    },
)

platform(
    name = "ash-bash-strace",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace:927w6f6x3xdhbsi8z36sp89gav9kl801",
    },
)

platform(
    name = "ash-bash-strace-coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-coreutils:qgp20j25g8zx6m7zw2zgd4vwfwxsaswb",
    },
)

platform(
    name = "ash-bash-strace-coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-coreutils-i686:fa4dw1vqngdjpc2cf6pj7mq54jddlkki",
    },
)

platform(
    name = "ash-bash-strace-coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-coreutils-i686-cc:k2akdvm8yy3ldmh3cw3wcfarjbcfm8qb",
    },
)

platform(
    name = "ash-bash-strace-coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-coreutils-i686-cc-x86_64:5gn3svs868a3pma67j5p0wkjm6v7rlk7",
    },
)

platform(
    name = "ash-bash-strace-coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-coreutils-i686-cc-x86_64-cc:9kw8ghx6xn3bcki482ba0syxdci39dxn",
    },
)

platform(
    name = "ash-bash-strace-coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-coreutils-i686-x86_64:mprvhkfg2336rby40bmill757kn976ia",
    },
)

platform(
    name = "ash-bash-strace-coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-coreutils-i686-x86_64-cc:qwyccs8srxaxvha8ibl4zghalsbymh43",
    },
)

platform(
    name = "ash-bash-strace-coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-coreutils-x86_64:x0v2dc4riy013ysm1fa28c3p4bpidd5q",
    },
)

platform(
    name = "ash-bash-strace-coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-coreutils-x86_64-cc:34pzasim3yinhx9dvy6nqys9wq04ib7p",
    },
)

platform(
    name = "ash-bash-strace-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-i686:ycjcb4z5zx45nizqrc43lz6i3b44zszy",
    },
)

platform(
    name = "ash-bash-strace-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-i686-cc:kmnvvirrcxxga1ivgxjy9kmf72xfjdm2",
    },
)

platform(
    name = "ash-bash-strace-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-i686-cc-x86_64:mdqpwjlh0rck8dbhk94k96klicqzxpxg",
    },
)

platform(
    name = "ash-bash-strace-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-i686-cc-x86_64-cc:sjs3zv2q2namzf1nimj4jd614fxl841h",
    },
)

platform(
    name = "ash-bash-strace-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-i686-x86_64:v0bp7kfh2x6n1ixxbxa66c73llrd4d7b",
    },
)

platform(
    name = "ash-bash-strace-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-i686-x86_64-cc:7bjwxi2cmakjcyykxcnng5jyvmdahbq2",
    },
)

platform(
    name = "ash-bash-strace-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-x86_64:7vvimygxwy4pikyckfwahqw9742nyswj",
    },
)

platform(
    name = "ash-bash-strace-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-strace-x86_64-cc:3r2f7jjn76ps6jg8al3wfk47dc1pbbw9",
    },
)

platform(
    name = "ash-bash-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-x86_64:w70kks7bpn75h5gfmn68wpf4k442y3j7",
    },
)

platform(
    name = "ash-bash-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-bash-x86_64-cc:l51a5lhd1z7vw6rjngz8ldgsx0znm424",
    },
)

platform(
    name = "ash-coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils:z08bj29qk9imw869n69shdd40h899n56",
    },
)

platform(
    name = "ash-coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-i686:r3n6apzv83lgc4vy8c62yxd1g4rin104",
    },
)

platform(
    name = "ash-coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-i686-cc:8qa0v2sri3v1v52nmr1zh04czsrzcapw",
    },
)

platform(
    name = "ash-coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-i686-cc-x86_64:3gk9c5vy21ffx9lyi50bp7jxfblxwhbs",
    },
)

platform(
    name = "ash-coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-i686-cc-x86_64-cc:q02g9qf6jzcflbmjy0brc7m2j7q12yg3",
    },
)

platform(
    name = "ash-coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-i686-x86_64:6cjzzm5vv3n25jxiaxd2m04n2xkybpib",
    },
)

platform(
    name = "ash-coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-i686-x86_64-cc:gnynsaikdpihc9ndw54g6f8fx78rx3q2",
    },
)

platform(
    name = "ash-coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-x86_64:xvczsxqx7k5i0g1hrp9y51ylc713c2b1",
    },
)

platform(
    name = "ash-coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-coreutils-x86_64-cc:vx92wppgyknsyyd4k80i58hb362wkpsc",
    },
)

platform(
    name = "ash-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-i686:lnbzmipdyvfgml43f6vh16bykr8jx1x0",
    },
)

platform(
    name = "ash-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-i686-cc:w2j9px0n3vxvxa4y0hppq4sn8zqsf2ba",
    },
)

platform(
    name = "ash-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-i686-cc-x86_64:pgk05wp1cp4agx07f8wjbvvjnr5px1l7",
    },
)

platform(
    name = "ash-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-i686-cc-x86_64-cc:9wqxw3fzjrapm6hg823f7vzbk2af3y5n",
    },
)

platform(
    name = "ash-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-i686-x86_64:w9dhlavssr5ypx610dcp9aiizbmi6ybk",
    },
)

platform(
    name = "ash-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-i686-x86_64-cc:a1zv17ds5hlbjg7v7i2ddyb5c0xk70ak",
    },
)

platform(
    name = "ash-strace",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace:6135lgvb69crlrlrdynk9f1qhcqd7w6m",
    },
)

platform(
    name = "ash-strace-coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils:ixsfl4ncq8vdpc4dp2fyi9ghm9c1jika",
    },
)

platform(
    name = "ash-strace-coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-i686:vzfg86cvnwys2zawxixba5ndbdh3knl5",
    },
)

platform(
    name = "ash-strace-coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-i686-cc:mn6isvmj55j8bqmjpcs2pv466iyyd8pk",
    },
)

platform(
    name = "ash-strace-coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-i686-cc-x86_64:4xnp761k9iq9xq5nalhm5hnmmcizql6k",
    },
)

platform(
    name = "ash-strace-coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-i686-cc-x86_64-cc:w18hf397fzbz8rl5f2cawylrrp6y95zb",
    },
)

platform(
    name = "ash-strace-coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-i686-x86_64:9d3r964hy73g43plxh2hhddn9swqmnx5",
    },
)

platform(
    name = "ash-strace-coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-i686-x86_64-cc:r57iypapx23srzw1fclky1vw5c3avrj2",
    },
)

platform(
    name = "ash-strace-coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-x86_64:bzg87r59vr907szs9qx1prvy23a0i852",
    },
)

platform(
    name = "ash-strace-coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-coreutils-x86_64-cc:x4qbzv8shpkfw8a5aqqbv1jil8dhvaxw",
    },
)

platform(
    name = "ash-strace-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-i686:i60bsp99bb34dkcy6sfrq2109d4l67yl",
    },
)

platform(
    name = "ash-strace-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-i686-cc:7wiqwy1d1gc31pl58i8fq6l0hwdaz0db",
    },
)

platform(
    name = "ash-strace-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-i686-cc-x86_64:8ci74268rkn0v9zlj3qk4k737qb2dcxc",
    },
)

platform(
    name = "ash-strace-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-i686-cc-x86_64-cc:wx9has7rj4i7pxb8c4530wb4k6k31mls",
    },
)

platform(
    name = "ash-strace-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-i686-x86_64:74wx760jayk9vzj14m1aznc7z22dnpzq",
    },
)

platform(
    name = "ash-strace-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-i686-x86_64-cc:bny0gqwz0mc3mb83ib896pxpi0s1q42x",
    },
)

platform(
    name = "ash-strace-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-x86_64:75f5jci7kv1rl5zmwg3wb18knv37ff04",
    },
)

platform(
    name = "ash-strace-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-strace-x86_64-cc:1p4b7j6f94fxwsdvx7zhgnca3yzkmg91",
    },
)

platform(
    name = "ash-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-x86_64:gkhsk0d2gkdaq5i4fbhh7yfv5f8yby9h",
    },
)

platform(
    name = "ash-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/ash-x86_64-cc:v9m6v8m5wcrpxgrlsmn7sfxf4f0053fy",
    },
)

platform(
    name = "bash",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash:53bllyph65hcsvvf4xq5gi4javbim6hb",
    },
)

platform(
    name = "bash-coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-coreutils:w1xs4m8j4m8dz6rnn6hnzdircp92cm6q",
    },
)

platform(
    name = "bash-coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-coreutils-i686:s7vnx1414wv8fl4yhshkcwkajq448hlm",
    },
)

platform(
    name = "bash-coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-coreutils-i686-cc:haf5dxgyajgcra7pz5fjhbha93hvqpap",
    },
)

platform(
    name = "bash-coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-coreutils-i686-cc-x86_64:0mck0nzmrq00nan62cr83wf1xxnpiisv",
    },
)

platform(
    name = "bash-coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-coreutils-i686-cc-x86_64-cc:k7if1218gpdqdq7ndg9jz5y84yflq10k",
    },
)

platform(
    name = "bash-coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-coreutils-i686-x86_64:fqygss009gy27cdaip42xx86pb2jfy0r",
    },
)

platform(
    name = "bash-coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-coreutils-i686-x86_64-cc:wpslz71yc1l031idar6ihiaa7kp5qszw",
    },
)

platform(
    name = "bash-coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-coreutils-x86_64:l5aqn8w5g6jkay395aw2xbz5ajkabdch",
    },
)

platform(
    name = "bash-coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-coreutils-x86_64-cc:z0pchww1xdc1q0ikxk5lpdrlkj66h9b6",
    },
)

platform(
    name = "bash-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-i686:8m9fsjma17ndc8s963wkiali4wkcn4x4",
    },
)

platform(
    name = "bash-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-i686-cc:rc4vbkjy264b1s9kg06h9pi8937zp7fy",
    },
)

platform(
    name = "bash-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-i686-cc-x86_64:x73v35z36qs1lycca69nbs2qx344wp4x",
    },
)

platform(
    name = "bash-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-i686-cc-x86_64-cc:1nfyikd0hbz4xbc54ava851q0zdybimv",
    },
)

platform(
    name = "bash-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-i686-x86_64:li8inp2njhrasns6jccf3w10pksfiqg3",
    },
)

platform(
    name = "bash-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-i686-x86_64-cc:hvydjs5ch6qyznyiy1fcvyab2jayc7iv",
    },
)

platform(
    name = "bash-strace",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace:5hbgll2qrad9prrglf08d4iyikdni656",
    },
)

platform(
    name = "bash-strace-coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-coreutils:7cq1qqzmw5wv2jcn07azki7bhf1hn5sv",
    },
)

platform(
    name = "bash-strace-coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-coreutils-i686:xdy3w5nxz81s93x5fsxqgi96q99azdli",
    },
)

platform(
    name = "bash-strace-coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-coreutils-i686-cc:q4kpvhrhq023zswikry13zi896wx6knd",
    },
)

platform(
    name = "bash-strace-coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-coreutils-i686-cc-x86_64:vgwync8r8b6n7qk223x2fibqfrg542r7",
    },
)

platform(
    name = "bash-strace-coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-coreutils-i686-cc-x86_64-cc:qc3gmibslnx2rxbhwz8bpw58xcipmb3k",
    },
)

platform(
    name = "bash-strace-coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-coreutils-i686-x86_64:lhs4cjvx3md905m9n9z462r2dn5q4xd6",
    },
)

platform(
    name = "bash-strace-coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-coreutils-i686-x86_64-cc:35ksslwskzn961ssc20nkbgz2bq60k5y",
    },
)

platform(
    name = "bash-strace-coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-coreutils-x86_64:d2qybykpkf14c0407ancghn7zlpcbxml",
    },
)

platform(
    name = "bash-strace-coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-coreutils-x86_64-cc:axxlv8bcxswggj66la7knkbb7xy6xy3m",
    },
)

platform(
    name = "bash-strace-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-i686:yhj1cg5g1nbq4nx6zxm3hglbpvhhgpn8",
    },
)

platform(
    name = "bash-strace-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-i686-cc:z8p8xl4jkj1lvbm40rrrr065hnk78iv7",
    },
)

platform(
    name = "bash-strace-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-i686-cc-x86_64:47ivcc7vkyy5khscc8wa4n2mqmxacpgh",
    },
)

platform(
    name = "bash-strace-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-i686-cc-x86_64-cc:ziffv80sxka79jfl0dcv3rjv62ah6qjz",
    },
)

platform(
    name = "bash-strace-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-i686-x86_64:ybf6ncgycazvjqikscyg4d3yhfs8k5ra",
    },
)

platform(
    name = "bash-strace-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-i686-x86_64-cc:gc1hxj5jq38hyyc5bidf5bjp76gw3pcb",
    },
)

platform(
    name = "bash-strace-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-x86_64:p4is3y4iv06vcaj54zm9v9af18igqh6j",
    },
)

platform(
    name = "bash-strace-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-strace-x86_64-cc:0yq4q1z4jklsrf8fw2c8ny2l51dsw85k",
    },
)

platform(
    name = "bash-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-x86_64:s4ysf4lnnzbgi2zjd238rb1dv36wfz8q",
    },
)

platform(
    name = "bash-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/bash-x86_64-cc:yd0x3cldfj8dn9f103yws8rzq86wih7f",
    },
)

platform(
    name = "coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils:xr0jn3x6ald91f83czxzgp9a20943d19",
    },
)

platform(
    name = "coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-i686:hqm7qa3xa4z94c3jig44b2g6j0981sbm",
    },
)

platform(
    name = "coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-i686-cc:s56vsx4c7jxdwgdfmcsvknx6xw8l5imz",
    },
)

platform(
    name = "coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-i686-cc-x86_64:632bmc3417p0rnwwcs6dg627vg558mhz",
    },
)

platform(
    name = "coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-i686-cc-x86_64-cc:wymq9rwc359y159sd3mw4hpnyyw6wwk2",
    },
)

platform(
    name = "coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-i686-x86_64:bz9xlm9d4j67ydzb508j3gijll9v003p",
    },
)

platform(
    name = "coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-i686-x86_64-cc:ilh4m2hmzw02v5vb6yi536vlgiqp963h",
    },
)

platform(
    name = "coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-x86_64:bfyhjaqfndqyzprj2y1m2k0f2fwjxbxr",
    },
)

platform(
    name = "coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/coreutils-x86_64-cc:6maxwh90bv7x5ivxabh3bxpj26wsqc4f",
    },
)

platform(
    name = "i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/i686:70fwsljzl8h98yv2fiaar2x7l29bpp9v",
    },
)

platform(
    name = "i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/i686-cc:88ksfzmzr05k4bwx9pw7kmaq5p54n5ar",
    },
)

platform(
    name = "i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/i686-cc-x86_64:92vrrci5q878q2raw6mi5w7r4ahhrjv6",
    },
)

platform(
    name = "i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/i686-cc-x86_64-cc:b4wavzsani308r9hj2b16mrnw8cvpybv",
    },
)

platform(
    name = "i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/i686-x86_64:dc9hbjp0jifwzckxj1psc4y2vmrhaq1m",
    },
)

platform(
    name = "i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/i686-x86_64-cc:pzip5c2f47gd45n1sbh5ybqmvwsr4337",
    },
)

platform(
    name = "strace",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace:v9kdy8mb9b8hkjn5rc5wmsqg9xmd71q5",
    },
)

platform(
    name = "strace-coreutils",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils:l54py8rh5i2alrqpis6p01g99s5200l7",
    },
)

platform(
    name = "strace-coreutils-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-i686:jax1q5kmilb6g2csmij50mjwh1nsssbc",
    },
)

platform(
    name = "strace-coreutils-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-i686-cc:j7q3aghxzfbk2d827ck0ddnida8j02q3",
    },
)

platform(
    name = "strace-coreutils-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-i686-cc-x86_64:qbk53wcsrz2fwd87pl2w8rjdrrn8y7q3",
    },
)

platform(
    name = "strace-coreutils-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-i686-cc-x86_64-cc:s4fjx0icp4srrw43z9crgavmkfp5msv3",
    },
)

platform(
    name = "strace-coreutils-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-i686-x86_64:5h1i2qwhznfmpjp73g3zmlqkdvalm9s3",
    },
)

platform(
    name = "strace-coreutils-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-i686-x86_64-cc:d8madrhmsayi6zfphspalcaxwgg7gjhz",
    },
)

platform(
    name = "strace-coreutils-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-x86_64:3lyl3y90sfdx0wcv2nfimw4famygfwx2",
    },
)

platform(
    name = "strace-coreutils-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-coreutils-x86_64-cc:1617y4k3nbb2vs08g7hz3g4xj6zv1bir",
    },
)

platform(
    name = "strace-i686",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-i686:sbz28822ka8xganyq13klw4xrlahvvjx",
    },
)

platform(
    name = "strace-i686-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-i686-cc:n006hzjlaw1s6fxyp2mals1w42lv0pvz",
    },
)

platform(
    name = "strace-i686-cc-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-i686-cc-x86_64:4v5zwjcfkrhcjbcmxg56c37s1s9z99xg",
    },
)

platform(
    name = "strace-i686-cc-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-i686-cc-x86_64-cc:r2ds96ybmj6xc78m52304jwq846l00bp",
    },
)

platform(
    name = "strace-i686-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-i686-x86_64:r7j2br7kcz82zfcn5xqjf6chqvzvigwz",
    },
)

platform(
    name = "strace-i686-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-i686-x86_64-cc:7h7ki31by1w2l6cibk1gc7x3wqhnscm6",
    },
)

platform(
    name = "strace-x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-x86_64:y802cd9prckpb186izb5yr6mpi3yfzwd",
    },
)

platform(
    name = "strace-x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/strace-x86_64-cc:1yrashd9z4c6bf3v8h6fy9206h5bi0b5",
    },
)

platform(
    name = "x86_64",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/x86_64:z9c61rsqjilnwaa95pl7l50kjc35jf8d",
    },
)

platform(
    name = "x86_64-cc",
    parents = [":starterkit-x86_64-linux"],
    exec_properties = {
        "container-image": "docker://harbor.apps.morrigna.rules-nix.build/explore-bzl/x86_64-cc:ax88zak2p867xvpasp8hix85ja2gssp5",
    },
)

